--- a/aoc2017/index.html
+++ b/aoc2017/index.html
@@ -14,6 +14,7 @@
 
   <script src="js/day1.js"></script>
   <script src="js/day2.js"></script>
+  <script src="js/day3.js"></script>
 
   <style>
     #snowflake {
@@ -25,7 +26,7 @@
       background-color: rgb(41, 162, 251);
       content: "";
       opacity: 0.15;
-      position: absolute;
+      position: fixed;
       top: 0;
       bottom: 0;
       right: 0;
@@ -42,7 +43,7 @@
       background-color: rgba(0, 0, 0, 0);
       content: "";
       opacity: 0.35;
-      position: absolute;
+      position: fixed;
       top: 0;
       bottom: 0;
       right: 0;
